--- a/templates/result.html
+++ b/templates/result.html
@@ -15,6 +15,10 @@
                 <img src="{{ url_for('static', filename='uploads/' + original_image) }}" alt="Original Image">
             </div>
             <div class="image-box">
+                <h2>Cloth Image</h2>
+                <img src="{{ url_for('static', filename='uploads/' + cloth_image) }}" alt="Cloth Image">
+            </div>
+            <div class="image-box">
                 <h2>Transformed Image</h2>
                 <img src="{{ url_for('static', filename='uploads/' + processed_image) }}" alt="Transformed Image">
             </div>
