--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
             <input type="password" name="password" placeholder="Password" required>
             <input type="submit" value="Enter the Future">
         </form>
-        <p>New to the future? <a href="{{ url_for('register') }}" class="button">Register now</a></p>
+        <p>New to the future? <a href="{{ url_for('register') }}">Register now</a></p>
     </div>
 </body>
 </html>
